--- a/config.toml
+++ b/config.toml
@@ -1,34 +1,93 @@
-baseURL = "http://ethique.xyz/"
-languageCode = "fr-fr"
+baseURL = "https://ethique.xyz"
 title = "Éthique minimale"
+# for smart copyright line, leave this blank and check [params.copyright]
+copyright = ""
+
 theme = "minimo"
 
 disqusShortname = "ethiquemini"
 googleAnalytics = ""
+
 Paginate = 50
-
 preserveTaxonomyNames = true
+footnoteReturnLinkContents = "&larrhk;"
 
-[params]
-  description = "Une éthique applicable qui tient en un tweet"
-  dateFormat = "2006, Jan 2"
-  copyrightOwner = "CC-BY-SA 4.0 Ethique.xyz"
-  copyrightStartYear = "2017"
-  favicon = "favicon.ico"
-  hideEntryNavigation = true
-  customCSS = ["css/custom.css"]
-  hideSocialMenu = true
-  showReadTime = true
+enableRobotsTXT = true # generate robots.txt
 
-[author.social]
-  twitter = "burgervege"
+# Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
+pygmentsCodefences = true
 
-# Language Configuration
-defaultContentLanguage = "fr"
+# Missing translations will default to this content language
+defaultContentLanguage = "en"
+
+[params.info]
+description = "Une éthique applicable qui tient en un tweet"
+title404 = "404 !"
+
+[params.assets]
+favicon = "favicon.ico"
+customCSS = ["css/custom.css"]
+customJS = ["js/custom.js"]
+gopher = "" # used in 404 template ( Generator: https://gopherize.me )
+
+[params.copyright]
+prefix = ""
+holder = "CC-BY-SA 4.0 Ethique.xyz"
+startYear = "2017"
+suffix = ""
+
+[params.settings]
+# date & time format: https://golang.org/pkg/time/
+dateFormat = "02 Jan 2006"
+listDateFormat = "2006, Jan 02"
+hideEntryNavigation = ["page", "blog"] # boolean / array of sections
+hideSocialMenu = true
+showReadingTime = true
+
+[params.opengraph.facebook]
+admins = [] # array of Facebook IDs
+appID = ""
+pageID = ""
+
+[params.opengraph.twitter]
+page = "" # Twitter page username
+
+[params.seo]
+# Title Separator: - – — · • * ⋆ | ~ « » < >
+titleSeparator = "•"
+
+[params.social]
+codepen = ""
+email = ""
+facebook = ""
+github = ""
+instagram = ""
+linkedin = ""
+twitter = ""
+
+[params.social.config]
+platforms = ["github","facebook","twitter","instagram","email","codepen","linkedin"]
+
+[taxonomies]
+author = "authors"
+category = "categories"
+tag = "tags"
+
+# [permalinks]
+# page = "/:slug/"
+
+# [[menu.main]]
+# name = "Repo"
+# weight = -10
+# identifier = "repository"
+# url = ""
+
+[blackfriday]
+hrefTargetBlank = true
 
 [languages]
-  # edit this block for your own language
-  [languages.fr]
-    lang = "fr"
-    languageName = "Français"
-    weight = 1
+# edit this block for your own language
+[languages.fr]
+lang = "fr"
+languageName = "Français"
+weight = 1
