=desactive authors, + lien consideration

--- a/data/authors/ggallais.toml
+++ b/data/authors/ggallais.toml
@@ -3,9 +3,8 @@ id = "ggallais"
 [email]
 username = ""
 host = ""
-
 [name]
-display = "Guillaume Gallais"
+display = "guillaume"
 
 [social]
 email = ""
