--- a/config.toml
+++ b/config.toml
@@ -114,6 +114,7 @@ title404 = "404 !"
 [params.assets]
 favicon = "favicon.ico"
 customCSS = ["css/custom.css"]
+customJS = ["js/custom.js"]
 gopher = "" # used in 404 template ( Generator: https://gopherize.me )
 
 [params.copyright]
