--- a/config.toml
+++ b/config.toml
@@ -184,7 +184,7 @@ weight = 1
 title = "Éthique minimale"
 
 [languages.fr.params.info]
-description = "Une éthique applicable qui tient en un tweet"
+description = "Un site sur l'éthique de Ruwen Ogien"
 
 [[languages.fr.menu.main]]
 url    = "/"
